[package]
name = "foobar"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
] }
parity-scale-codec = { version = "3.7", default-features = false, features = [
    "derive",
] }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale-info/std", "parity-scale-codec/std"]
ink-as-dependency = []
e2e-tests = []
